--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,10 +45,23 @@ address {
   line-height: 1.8;
 }
 
+main {
+  margin: 0 auto;
+  background-color: #fff;
+  padding: 10px 0;
+}
+
+.clearfix {
+  zoom: 1;
+}
+
 .footer {
+  margin: 40px 10px;
+  position: relative;
+  width: 1140px;
   display: grid;
   grid-template-columns: 500px repeat(3, 1fr);
-  margin: 40px 10px;
+  gap: 16px;
 }
 
 .air p {
